--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <script src="script.js"></script>
 </head>
 <body>
-    
+    <header>
+        <h1>Library</h1>
+    </header>
+
+    <main>
+        <div class="book">
+            <h3>Title</h3>
+            <p class="author">Author</p>
+            <p class="pages">10</p>
+            <div class="toggle">read</div>
+        </div>
+    </main>
+
+    <footer>DL-GIT101</footer>
 </body>
 </html>
