Add some descriptive word temp

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <main>
         <div class="book">
             <h3>Title</h3>
-            <p class="author">Author</p>
-            <p class="pages">10</p>
+            <p class="author">by Author</p>
+            <p class="pages">10 pages</p>
             <div class="toggle">read</div>
         </div>
     </main>
