add container div  for books

--- a/index.html
+++ b/index.html
@@ -14,11 +14,19 @@
     </header>
 
     <main>
-        <div class="book">
-            <h3>Title</h3>
-            <p class="author">by Author</p>
-            <p class="pages">10 pages</p>
-            <div class="toggle">read</div>
+        <div class="cabinet">
+            <div class="book">
+                <h3>Title</h3>
+                <p class="author">by Author</p>
+                <p class="pages">10 pages</p>
+                <div class="toggle">read</div>
+            </div>
+            <div class="book">
+                <h3>Title</h3>
+                <p class="author">by Author</p>
+                <p class="pages">10 pages</p>
+                <div class="toggle">read</div>
+            </div>
         </div>
     </main>
 
