--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <body>
     <header>
         <h1>Library</h1>
+
+        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <g id="Edit / Add_Plus_Circle">
+        <path id="Vector" d="M8 12H12M12 12H16M12 12V16M12 12V8M12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12C21 16.9706 16.9706 21 12 21Z"/>
+        </g>
+        </svg>
     </header>
 
     <main>
