--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <section class="modal">
         <div class="content">
-            <span class="close">&times;</span>
+            <h2>ADD BOOK</h2>
             <form>
                 <label for="title">TItle</label>
                 <input type="text" id="title">
@@ -48,6 +48,10 @@
                 <input type="text" id="author">
                 <label for="pages">Pages</label>
                 <input type="number" id="pages">
+                <div class="buttons">
+                    <button class="close">Close</button>
+                    <button class="add" type="submit">Add</button>
+                </div>
             </form>
         </div>
     </section>
