Add .hidden to modal

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <footer>@ DL-GIT101</footer>
 
-    <section class="modal">
+    <section class="modal hidden">
         <div class="content">
             <h2>ADD BOOK</h2>
             <form>
