--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Library</title>
     <link rel="stylesheet" href="https://unpkg.com/normalize.css">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
         <h1>Library</h1>
 
-        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-        <g id="addBook">
+        <svg id="addBook" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <g>
         <path id="Vector" d="M8 12H12M12 12H16M12 12V16M12 12V8M12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12C21 16.9706 16.9706 21 12 21Z"/>
         </g>
         </svg>
