--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
                 <input type="text" id="author">
                 <label for="pages">Pages</label>
                 <input type="number" id="pages">
+                <label for="read">Have you read it?</label>
+                <label class="switch">
+                    <input type="checkbox" id="read">
+                    <span class="slider round"></span>
+                </label>
                 <div class="buttons">
                     <button class="close">Close</button>
                     <button class="add" type="submit">Add</button>
