Add some client-side validation

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             <h2>ADD BOOK</h2>
             <form>
                 <label for="title">TItle</label>
-                <input type="text" id="title">
+                <input type="text" id="title" minlength="2" maxlength="50">
                 <label for="author">Author</label>
-                <input type="text" id="author">
+                <input type="text" id="author" minlength="2" maxlength="50">
                 <label for="pages">Pages</label>
-                <input type="number" id="pages">
+                <input type="number" id="pages" max="1600">
                 <label for="read">Have you read it?</label>
                 <label class="switch">
                     <input type="checkbox" id="read">
