Remove the temp book html

--- a/index.html
+++ b/index.html
@@ -20,20 +20,7 @@
     </header>
 
     <main>
-        <div class="cabinet">
-            <div class="book">
-                <h3>Title</h3>
-                <p class="author">by Author</p>
-                <p class="pages">10 pages</p>
-                <div class="toggle">read</div>
-            </div>
-            <div class="book">
-                <h3>Title</h3>
-                <p class="author">by Author</p>
-                <p class="pages">10 pages</p>
-                <div class="toggle">read</div>
-            </div>
-        </div>
+        <div class="cabinet"></div>
     </main>
 
     <footer>@ DL-GIT101</footer>
