--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
             <h2>ADD BOOK</h2>
             <form>
                 <label for="title">TItle</label>
-                <input type="text" id="title" minlength="2" maxlength="50">
+                <input type="text" id="title" minlength="2" maxlength="50" required>
                 <label for="author">Author</label>
-                <input type="text" id="author" minlength="2" maxlength="50">
+                <input type="text" id="author" minlength="2" maxlength="50" required>
                 <label for="pages">Pages</label>
-                <input type="number" id="pages" max="1600">
+                <input type="number" id="pages" max="1600" required>
                 <label for="read">Have you read it?</label>
                 <label class="switch">
                     <input type="checkbox" id="read">
                     <span class="slider round"></span>
                 </label>
                 <div class="buttons">
-                    <button class="close">Close</button>
-                    <button class="add" type="submit">Add</button>
+                    <button class="close" type="button">Close</button>
+                    <button class="add" type="button">Add</button>
                 </div>
             </form>
         </div>
