--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </label>
                 <div class="buttons">
                     <button class="close" type="button">Close</button>
-                    <button class="add" type="button">Add</button>
+                    <button class="add" type="submit">Add</button>
                 </div>
             </form>
         </div>
