--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <label for="author">Author</label>
                 <input type="text" id="author" minlength="2" maxlength="50" required>
                 <label for="pages">Pages</label>
-                <input type="number" id="pages" max="1600" required>
+                <input type="number" id="pages" min="200" max="1600" required>
                 <label for="read">Have you read it?</label>
                 <label class="switch">
                     <input type="checkbox" id="read">
